--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,16 @@
   background-color: #ff000022;
   border: 2px dashed red;
 }
+
+
+body {
+  background-color: #B81450;
+}
+
+#inputs {
+  color: #B81450;
+}
+
+.btn {
+  color: #B81450;
+}
